[package]
name = "pensieve"
version = "0.1.0"
description = "Pensieve - AI-native personal knowledge management"
authors = ["dearcharlie"]
edition = "2021"

[lib]
name = "pensieve_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
notify = "6"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
dirs-next = "2"
